# FmodDemo

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/fmoddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: EffectFix.cpp  EffectFix.h  common.cpp  common_platform.cpp  effects.cpp  play_sound.cpp
app/src/main/cpp/fmod/: fmod_codec.h
app/src/main/java/com/fmoddemo/: EffectActivity.java  EffectUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/fmoddemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
